# darnax

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  DATASET_NOTES.md  GETTING_STARTED.md  IMPROVEMENTS.md  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
conf/: msca_conv.yaml
conf/model/: conv.yaml
conf/optimizer/: sgd.yaml
configs/: ours_emnist.yaml
docs/: _auto_api.py  index.md
docs/reference/: README.md  bionet.md  darnax.md
docs/tutorials/: 01_jax_and_equinox.md  02_states.md  03_modules.md  04_layermaps.md  05_orchestrators.md  06_simple_net_on_artificial_data.md  06_simple_net_on_artificial_data.py  07_optimized_training_on_mnist.md  07_optimized_training_on_mnist.py  08_trainer_on_mnist.md  08_trainer_on_mnist.py  09_sota_on_mnist.md  09_sota_on_mnist.py  README.md
reference/: index.html
reference/api/: index.html
reference/api/darnax/: index.html
reference/darnax/: index.html
scripts/: train.py  train_emnist.sh
search/: search_index.json
src/: setup.py
src/BioNet/modules/: ferromagnetic.py  fully_connected.py  input_output.py  interfaces.py  recurrent.py
src/BioNet/orchestrators/: interface.py
src/BioNet/states/: interface.py  sequential.py
src/benchmark/: parallel_execution.py  parallel_execution_features.py  parallel_execution_num_depth.py  parallel_execution_num_submodules.py
tests/datasets/: test_cifar10.py  test_cifar10_features.py  test_dataset_shuffling.py  test_datasets.py  test_fashion_mnist.py  test_mnist.py  test_rescale.py  test_tinyimagenet_features.py
tests/layer_map/: test_sparse.py
tests/modules/: test_conv_modules.py  test_conv_pooling.py  test_conv_utils.py  test_ferromagnetic.py  test_fully_connected.py  test_input_output.py  test_recurrent.py  test_recurrent_tanh.py
tests/orchestrators/: test_sequential.py
tests/states/: test_sequential.py
tests/trainers/: test_alternate.py  test_dynamical.py  test_hebbian.py
tests/utils/: test_cont_perceptron_rule.py  test_default_list.py  test_lmap_utils.py  test_perceptron_rule.py
tutorials/: 07_optimized_training_on_mnist.py  09_sota_on_mnist.py  index.html
tutorials/01_jax_and_equinox/: index.html
tutorials/02_states/: index.html
tutorials/03_modules/: index.html
tutorials/04_layermaps/: index.html
tutorials/05_orchestrators/: index.html
tutorials/06_simple_net_on_artificial_data/: index.html
tutorials/07_optimized_training_on_mnist/: index.html
tutorials/08_trainer_on_mnist/: index.html
tutorials/09_sota_on_mnist/: index.html
tutorials/10_sota_on_mnist_unified_lr/: index.html
(+85 files in other folders)
