[project]
name = "bionet"
version = "0.1.0"
description = "Recurrent network library on Equinox/JAX"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPLv3"}
authors = [{name="Davide Badalotti", email="davide.badalotti@outlook.it"}]
dependencies = [
  "jax>=0.4.28",
  "equinox>=0.11",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.5", "black>=24", "mypy>=1.10",
       "types-setuptools", "mkdocs-material", "mkdocstrings[python]",
       "pytest-benchmark", "nbmake", "pre-commit", "pip-audit"]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","D","N","ARG","SIM","PL","TCH"]
ignore = ["D100","D104", "D213", "D203", "E501", "N806", "ARG002", "E203"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
exclude = ["bench/", "tests/"]

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
